2nd navbar z-index problem solved. user dropdown toggle designed and needs to be functional

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,6 +1,7 @@
 .head-car {
     width: 100%;
     height: 600px;
+    margin-top: 9rem;
 }
 
 .swiper-m {
