--- a/css/product.css
+++ b/css/product.css
@@ -1,6 +1,5 @@
 body {
     background: #f5f5f5;
-    position: relative;
 }
 
 #top {
@@ -362,63 +361,6 @@ input {
     display: none;
 }
 
-.sticky-lg-top {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 50px;
-    z-index: 1020;
-}
-
-.botnav {
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-}
-
-.nav-pills .nav-link.active,
-.nav-pills .show>.nav-link {
-    background-color: #fff;
-    border-bottom: 2px solid #ef394e;
-    border-radius: 0;
-    color: #555;
-}
-
-.nav-pills .nav-link {
-    background: 0 0;
-    background-color: rgba(0, 0, 0, 0);
-    border: 0;
-    border-radius: .25rem;
-    background-color: #fff;
-    border-radius: 0;
-}
-
-.swiper-container {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
-
-.img-related {
-    width: 150px;
-    height: auto;
-}
-
 @media (max-width:564px) {
     .desktop-p {
         display: none;
@@ -562,99 +504,26 @@ input {
         color: #555;
     }
     .bg-perfect {
-        background-color: #13d25361;
+        background-color: #08d04b61;
         color: #0fc259;
         font-size: 13px;
+        margin-right: 15%;
     }
     .bg-good {
         background-color: #a6ff008e;
         color: #59c500;
         font-size: 13px;
+        margin-right: 15%;
     }
     .bg-bad {
-        background-color: #ff000040;
+        background-color: #ff00004f;
         color: #c20000;
         font-size: 13px;
+        margin-right: 15%;
     }
     .rate-items {
         font-size: 11px;
         font-weight: 100;
         color: #747474;
-    }
-    .satisfaction-items {
-        font-size: 11px;
-        color: #555;
-    }
-    .bg-p-perfct {
-        background-color: #156805;
-    }
-    .bg-p-good {
-        background-color: #59c500;
-    }
-    .bg-p-nocomment {
-        background-color: #e7c815;
-    }
-    .bg-p-notgood {
-        background-color: #ff7b00;
-    }
-    .bg-p-bad {
-        background-color: #dd1919;
-    }
-    .guaranty {
-        font-size: 11px;
-        color: #555;
-    }
-    .instock {
-        font-size: 11px;
-        color: #555;
-    }
-    .stock-title {
-        font-size: 12px;
-        color: #555;
-        font-weight: 300;
-    }
-    .p-off {
-        font-size: 12px;
-        height: 21px;
-    }
-    .old-price {
-        font-size: 12px;
-        color: #555;
-    }
-    .new-price {
-        font-size: 14px;
-        font-weight: 500;
-        color: #d12c3f;
-        text-align: left;
-    }
-    .slnum {
-        font-weight: 600;
-        margin-left: 2px;
-    }
-    .slico {
-        position: absolute;
-        left: 5px;
-    }
-    .gtxt {
-        font-size: 12px;
-        color: #555;
-        margin-bottom: 0;
-        line-height: 28px;
-    }
-    .sprice {
-        font-size: 13px;
-        color: #555;
-    }
-    .btn-buy {
-        background-color: #d12c3f;
-        color: #fff;
-        font-size: 12px;
-        height: 30px;
-    }
-    .btn-buy:hover {
-        background-color: #d12c3f;
-        color: #fff;
-        font-size: 12px;
-        height: 30px;
     }
 }
